bitwarden/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bitwarden
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bitwarden
  template:
    metadata:
      labels:
        app: bitwarden
    spec:
      containers:
        - name: bitwarden
          image: bitwardenrs/server-postgresql:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 1m
              memory: 50Mi
            limits:
              cpu: 50m
              memory: 100Mi
          ports:
            - containerPort: 80
