bitwarden/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bitwarden
spec:
  ports:
    - port: 80
  selector:
    app: public-stats
